--- a/1/doc.tex
+++ b/1/doc.tex
@@ -58,11 +58,11 @@ och ser att $x = -2$ och $x = 1$ löser ekvation (\ref{2pol}).
 $x = -2$ och $x = 1$ löser ekvation (\ref{2pol}), men inte nödvändigtvis vår ursprungliga ekvation (\ref{orig}). På två platser, rad (\ref{kvad1}) och (\ref{kvad2}) har vi kvadrerat båda led vilket har medfört ekv (\ref{2pol}), men denna ekvation är inte ekvivalent med den ursprungliga. Mer konkret kan vi säga att lösningarna till ekv (\ref{orig}) är en delmängd till lösningarna för ekv (\ref{2pol}). I detta fall då ekv (\ref{2pol}) endast har två lösningar kan vi helt enkelt testa båda i ekv (\ref{orig}).
 
 \begin{align*}
-  & \text{($x = -2$)}&  \sqrt{(-2) + 3} &+ \sqrt{2 - (-2)} &= \quad 1 + 0 \quad \neq \quad 3 \quad\quad\quad&&\\
+  & \text{($x = -2$)}&  \sqrt{(-2) + 3} &+ \sqrt{2 - (-2)} &= \quad 1 + 2 \quad = \quad 3 \quad\quad\quad&&\\
   & \text{($x = 1$)}&  \sqrt{1 + 3}    &+ \sqrt{2 - 1}    &= \quad 2 + 1 \quad =    \quad 3    \quad\quad\quad&&
 \end{align*}
 
-Nu ser vi att $x = 1$ är den enda lösningen till $\sqrt{x + 3} + \sqrt{2 - x} = 3$.
+$x = -2$ och $x = 1$ är lösningarna till $\sqrt{x + 3} + \sqrt{2 - x} = 3$.
 
 \centerline{$\qed$}
 
