--- a/1/doc.tex
+++ b/1/doc.tex
@@ -14,55 +14,53 @@
 Uppgiften är att finna alla reella lösningar till
 
 \begin{gather*}
-  \sqrt{x + 3} + \sqrt{2 - x} = 3 \label{orig}\tag{0}
+  \sqrt{x + 3} + \sqrt{2 - x} = 3 \label{orig}\tag{0}.
 \end{gather*}
 
-\section*{Bortkvadrering av rötter}
+\section*{Algebraisk bearbetning}
 
-Vi börjar med att flytta över ena roten till högerledet för att sedan kvadrera
+Vi börjar med att flytta över ena roten till högerledet för att sedan kvadrera:
 
 \begin{align}
-  &\Leftrightarrow  &\sqrt{x + 3}   &= 3 - \sqrt{2 - x} &\\
+  (\text{\ref{orig}})\quad &\Leftrightarrow  &\sqrt{x + 3}   &= 3 - \sqrt{2 - x} \nonumber &\\
   &\Rightarrow      &x + 3          &= 9 - 6\sqrt{2 - x} + 2 - x & \label{kvad1}\\
-  &\Leftrightarrow  &4 - x          &= 3\sqrt{2 - x} &
+  &\Leftrightarrow  &4 - x          &= 3\sqrt{2 - x}\text{.} \label{noroot} &
 \end{align}
 
-Återigen kvadrerar vi båda led
+Återigen kvadrerar vi båda led:
 
 \begin{align}
-  &\Rightarrow &(4 - x)^2 &= (3\sqrt{2 - x})^2 & \label{kvad2}\\
-  &\Leftrightarrow &16 - 8x + x^2 &= 9(2 - x) &\\
-  &\Leftrightarrow &x^2+ x &= 2 &  \label{2pol}
+  (\text{\ref{noroot}})\quad &\Rightarrow &(4 - x)^2 &= (3\sqrt{2 - x})^2 & \label{kvad2}\\
+  &\Leftrightarrow &16 - 8x + x^2 &= 9(2 - x) \nonumber&\\
+  &\Leftrightarrow &x^2+ x &= 2\text{.} &  \label{2pol}
 \end{align}
 
-\section*{Kvadratkompletering och lösningar}
-
-Vi ser att ekvation (\ref{2pol}) är ett andragradspolynom som går att lösa med b.la. kvadratkompletering.
+Vi ser att ekvation (\ref{2pol}) är ett andragradspolynom som går att lösa med b.la. kvadratkompletering:
 
 \begin{align}
-  & &x^2 + x &= 2 &\\[6pt]
-  &\Leftrightarrow &\biggl(x + \frac{1}{2}\biggr)^2 - &\biggl(\frac{1}{2}\biggr)^2 = 2 &\\[6pt]
-  &\Leftrightarrow &\biggl(x + \frac{1}{2}&\biggr)^2 = \frac{9}{4} &
+  (\text{\ref{2pol}})\quad &\Leftrightarrow &\biggl(x + \frac{1}{2}\biggr)^2 - &\biggl(\frac{1}{2}\biggr)^2 = 2 \nonumber &\\[6pt]
+  &\Leftrightarrow &\biggl(x + \frac{1}{2}&\biggr)^2 = \frac{9}{4}\text{.} & \label{kvadrarkompleterad}
 \end{align}
-Vi drar kvadratroten hur båda led
+
+Vi drar kvadratroten hur båda led:
 
 \begin{align}
-  &\Leftrightarrow  && x + \frac{1}{2} = \pm \sqrt{\frac{9}{4}} & \\[10pt]
-  &\Leftrightarrow  && x = \frac{ \pm 3 - 1 }{ 2 } &
+  (\text{\ref{kvadrarkompleterad}})\quad &\Leftrightarrow  && x + \frac{1}{2} = \pm \sqrt{\frac{9}{4}} & \nonumber \\[10pt]
+  &\Leftrightarrow  && x = \frac{ \pm 3 - 1 }{ 2 } \nonumber &
 \end{align}
 
 och ser att $x = -2$ och $x = 1$ löser ekvation (\ref{2pol}).
 
 \section*{Verifiering av lösningar}
 
-$x = -2$ och $x = 1$ löser ekvation (\ref{2pol}), men inte nödvändigtvis vår ursprungliga ekvation (\ref{orig}). På två platser, rad (\ref{kvad1}) och (\ref{kvad2}) har vi kvadrerat båda led vilket har medfört ekv (\ref{2pol}), men denna ekvation är inte ekvivalent med den ursprungliga. Mer konkret kan vi säga att lösningarna till ekv (\ref{orig}) är en delmängd till lösningarna för ekv (\ref{2pol}). I detta fall då ekv (\ref{2pol}) endast har två lösningar kan vi helt enkelt testa båda i ekv (\ref{orig}).
+$x = -2$ och $x = 1$ löser ekvation (\ref{2pol}), men inte nödvändigtvis vår ursprungliga ekvation (\ref{orig}). På två platser, rad (\ref{kvad1}) och (\ref{kvad2}) har vi kvadrerat båda led vilket har medfört ekv (\ref{2pol}), men denna ekvation är inte nödvändigtvis ekvivalent med den ursprungliga. Mer konkret kan vi säga att lösningarna till ekv (\ref{orig}) är en delmängd till lösningarna för ekv (\ref{2pol}). I detta fall då ekv (\ref{2pol}) endast har två lösningar kan vi helt enkelt testa båda i ekv (\ref{orig}).
 
 \begin{align*}
   & \text{($x = -2$)}&  \sqrt{(-2) + 3} &+ \sqrt{2 - (-2)} &= \quad 1 + 2 \quad = \quad 3 \quad\quad\quad&&\\
-  & \text{($x = 1$)}&  \sqrt{1 + 3}    &+ \sqrt{2 - 1}    &= \quad 2 + 1 \quad =    \quad 3    \quad\quad\quad&&
+  & \text{($x = 1$)}&  \sqrt{1 + 3}    &+ \sqrt{2 - 1}    &= \quad 2 + 1 \quad =    \quad 3 \text{.}    \quad\quad\quad&&
 \end{align*}
 
-$x = -2$ och $x = 1$ är lösningarna till $\sqrt{x + 3} + \sqrt{2 - x} = 3$.
+Därmed ser vi att $x = -2$ och $x = 1$ är lösningarna till $\sqrt{x + 3} + \sqrt{2 - x} = 3$.
 
 \centerline{$\qed$}
 
