--- a/4/doc.tex
+++ b/4/doc.tex
@@ -77,30 +77,30 @@ Nu har vi kört fast, visserligen går det att lösa tredjegradsekvationer av de
 Nu begränsar vi oss till fallet då $x^{2} + 3x \geq 0$ och löser den resulterande ekvationen:
 
 \begin{align*}
-  \text{(\ref{single_abs})} \iff \quad & 2x^{2} + 10x + 7 = 2x^{2} + 6x\\
+  \text{(\ref{single_abs})} \implies \quad & 2x^{2} + 10x + 7 = 2x^{2} + 6x\\
   \iff \quad & 4x + 7 = 0 \\
-  \iff \quad & x = -\frac{7}{4}\text{.}
+  \iff \quad & x = -\tfrac{7}{4}\text{.}
 \end{align*}
 \\
-Vi ser att $x = -\frac{7}{4}$ löser ekv (\ref{squared}) vilket innebär att detta också är en lösning för (\ref{3rd_degree}) eftersom den medförs av (\ref{squared}). Faktorsatsen ger nu att $(x + \frac{7}{4})$ är en faktor till (\ref{3rd_degree}) och vi kan således utföra polynomdivison. Resultaten av en sådan division ger:
+Det visar sig medelst insättning av $x=-\tfrac{7}{4}$ i ekv (\ref{single_abs}) att $x = -\tfrac{7}{4}$ inte alls är en lösning, men om vi är lite slarviga (så som jag var) och ändå prövar detta värde på $x$ i ekv (\ref{3rd_degree}) så märker vi att det är en lösning! (Detta kan väll ändå inte bara vara ett kosmiskt sammanträffande!?) Nu när vi har ett nollställe till ekv (\ref{3rd_degree}) så ger faktorsatsen oss också att $x + \tfrac{7}{4}$ är en faktor till (\ref{3rd_degree}) och vi kan således utföra polynomdivison. Resultaten av en sådan division ger:
 
 \begin{gather}
-  \text{(\ref{3rd_degree})} \iff (x + 7 / 4)(16x^{2} + 64x + 28) = 0\text{.} \label{2nd_degree}
+  \text{(\ref{3rd_degree})} \iff (x + \tfrac{7}{4})(16x^{2} + 64x + 28) = 0\text{.} \label{2nd_degree}
 \end{gather}
 \\
-De resterande lösningarna till (\ref{3rd_degree}) är nollställerna till andragradspolynomet i (\ref{2nd_degree}), vi löser denna andragradsekvation med valfi metod, lösningarna blir:
+De resterande lösningarna till (\ref{3rd_degree}) är nollställerna till andragradspolynomet i (\ref{2nd_degree}), vi löser denna andragradsekvation med valfri metod, lösningarna blir:
 
 \begin{gather*}
   x = -\frac{7}{2} \quad \text{och} \quad x = - \frac{1}{2}\text{.}
 \end{gather*}
 \\
-$f(x) = 0$ har medfört ekv (\ref{2nd_degree}) som har de tre lösningarna $x = -7/2$, $x = -7/4$ och $x = -1/2$, vi testar nu all tre värden $f(x) = 0$ och finner att endast $x = -1/2$ är en lösning till $f(x) = 0$.
+$f(x) = 0$ har medfört ekv (\ref{2nd_degree}) som har de tre lösningarna $x = -\tfrac{7}{2}$, $x = -\tfrac{7}{4}$ och $x = -\tfrac{1}{2}$, att $x = -\tfrac{7}{4}$ inte är en lösning till $f(x) = 0$ vet vi sedan innan. Testar vi de andra två lösningarna finner vi att endast $x = -\tfrac{1}{2}$ är en lösning till $f(x) = 0$.
 \\
 \\
-Vi väljer nu två konkreta tal $a$ och $b$ som ligger till vänster respektive höger om nollstället, säg $a = -2$ och $b = 0$. Vi finner att $f(a) = 3$ och $f(b) = -1$. Nu har vi faktiskt all information vi behöver för att visa att $f < -1/2$ är lösningen till (\ref{**}):
+Vi väljer nu två konkreta tal $a$ och $b$ som ligger till vänster respektive höger om nollstället, säg $a = -2$ och $b = 0$. Vi finner att $f(a) = 3$ och $f(b) = -1$. Nu har vi faktiskt all information vi behöver för att visa att $x < -\tfrac{1}{2}$ är lösningen till (\ref{**}):
 \\
 \\
-$f(x)$ är en kontinuerlig funktion och $x = -1/2$ är dess enda nollstället. Det finns en punkt i intervallet $]-\infty, -1/2[$, nämligen $a$ så att $f(a) > 0$. Om det finns ett $\mu$ i detta intervall så att $f(\mu) < 0$ så säger sats 14 i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} att $f(x)$ då antar alla värden mellan $f(a)$ och $f(\mu)$ i intervallet $[a, \mu]$, då måste $f(x)$ anta värdet $0$ i detta intervall. Men $x = -1/2$ är det enda nollstället och ligger inte i intervallet. Antagandet att det finns ett sådant $\mu$ i intervallet leder till en motsägelse, alltså måste dess motsats vara sann; det finns inget sådant $\mu$ i intervallet, och då gälller att $f(x) > 0$ för alla $x$ i intervallet.
+$f(x)$ är en kontinuerlig funktion och $x = -1/2$ är dess enda nollstället. Det finns en punkt i intervallet $]-\infty, -1/2[$, nämligen $a$ så att $f(a) > 0$. Om det finns ett $\mu$ i detta intervall så att $f(\mu) < 0$ så säger sats (14) i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} att $f(x)$ då antar alla värden mellan $f(a)$ och $f(\mu)$ i intervallet $[a, \mu]$, då måste $f(x)$ anta värdet $0$ i detta intervall. Men $x = -1/2$ är det enda nollstället och ligger inte i intervallet. Antagandet att det finns ett sådant $\mu$ i intervallet leder till en motsägelse, alltså måste dess motsats vara sann; det finns inget sådant $\mu$ i intervallet, och då gälller att $f(x) > 0$ för alla $x$ i intervallet.
 \\
 \\På samma sätt visar vi att det för alla värden av $x$ intervallet $ ]-1/2, \infty[$ gäller att $f(x) < 0$ eftersomm $b$ ligger i detta intervall och $f(b) < 0$.
 
