--- a/4/doc.tex
+++ b/4/doc.tex
@@ -38,7 +38,7 @@
 \noindent Uppgiften omformuleras nu till denna ekvivalenta problemställning:
 \\
 \\
-\centerline{\emph{Finn alla värden på $x$ så att $f(x) > 0$.}}
+\centerline{\emph{Finn de värden på $x$ som upfyller olikheten: $f(x) > 0$.}}
 \\
 \\
 Nu finner vi alla nollställen till $f(x)$, vi börjar med att ställa upp ekvationen och flytta över en av rötterna till högerledet:
