--- a/4/doc.tex
+++ b/4/doc.tex
@@ -49,60 +49,39 @@ Nu finner vi alla nollställen till $f(x)$, vi börjar med att ställa upp ekvat
   \iff \quad &\sqrt{x^{2}} + \sqrt{(x + 3)^{2}} = 2 \sqrt{(x + 2)^{2}}\text{.} \label{initial}
 \end{align}
 \\
-Båda led kvadreras varefter vi förenklar så att de kvarvarande kvadratrötterna står ensam i högerledet:
+Båda led kvadreras varefter vi förenklar så att de kvarvarande kvadratrötterna står ensamma i högerledet:
 
 \begin{align}
   \text{(\ref{initial})} \implies \quad & \biggl(\sqrt{x^{2}} + \sqrt{(x + 3)^{2}}\biggr)^{2} = \biggl(2 \sqrt{(x + 2)^{2}}\biggr)^{2}\text{.} \nonumber\\
   \iff \quad & x^{2} + 2\sqrt{x^{2}}\sqrt{(x+3)^{2}} + (x + 3)^{2} = 4(x+2)^{2} \nonumber\\
-  \iff \quad & 2x^{2} + 10x + 7 = 2\sqrt{x^{2}}\sqrt{(x+3)^{2}}\text{.} \label{squared}
+  \iff \quad & 2x^{2} + 10x + 7 = 2\sqrt{(x(x+3))^{2}}\text{.} \label{squared}
 \end{align}
 \\
-Återigen kvadreras båda led och vi förenklar:
-
-\begin{align}
-  \text{(\ref{squared})} \implies \quad & (2x^{2} + 10x + 7)^{2} = (2\sqrt{x^{2}}\sqrt{(x+3)^{2}})^{2} \nonumber\\
-  \iff \quad & 4x^{4} + 40x^{3} + 128x^{2} + 140x + 49 = 4x^{4} + 24x^{3} + 36x^{2} \nonumber\\
-  \iff \quad & 16x^{3} + 92x^{2} + 140x + 49 = 0\text{.} \label{3rd_degree}
-\end{align}
-\\
-Nu har vi kört fast, visserligen går det att lösa tredjegradsekvationer av denna karaktär, men det ligger utanför denna seminariekurs. Om vi blickar tillbaka till (\ref{squared}) ser vi räddningen. Vi kan återigen använda identiteten $|x| = \sqrt{x^{2}}$ på (\ref{squared}):
-
-\begin{align}
-  \text(\ref{squared}) \iff 2x^{2} + 10x + 7 &= 2\sqrt{x^{2}}\sqrt{(x+3)^{2}}\nonumber\\
-                        &= 2\sqrt{(x(x+3))^{2}}\nonumber\\
-                        &= 2|x(x+3)|\nonumber\\
-                        &= 2|x^{2} + 3x|\text{.} \label{single_abs}
-\end{align}
-\\
-Nu begränsar vi oss till fallet då $x^{2} + 3x \geq 0$ och löser den resulterande ekvationen:
-
-\begin{align*}
-  \text{(\ref{single_abs})} \implies \quad & 2x^{2} + 10x + 7 = 2x^{2} + 6x\\
-  \iff \quad & 4x + 7 = 0 \\
-  \iff \quad & x = -\tfrac{7}{4}\text{.}
-\end{align*}
-\\
-Det visar sig medelst insättning av $x=-\tfrac{7}{4}$ i (\ref{single_abs}) att $x = -\tfrac{7}{4}$ inte alls är en lösning, men om vi är lite slarviga (så som jag var) och ändå prövar detta värde på $x$ i (\ref{3rd_degree}) så märker vi att det är en lösning! (Detta kan väll ändå inte bara vara ett kosmiskt sammanträffande!?) Nu när vi har ett nollställe till (\ref{3rd_degree}) så ger faktorsatsen oss också att $x + \tfrac{7}{4}$ är en faktor till (\ref{3rd_degree}) och vi kan således utföra polynomdivison. Resultaten av en sådan division ger:
+Vi låter $y = x(x+3)$ och substituerar in det it (\ref{squared}):
 
 \begin{gather}
-  \text{(\ref{3rd_degree})} \iff (x + \tfrac{7}{4})(16x^{2} + 64x + 28) = 0\text{.} \label{2nd_degree}
+  \text{(\ref{squared})} \iff \quad 2x^2 + 10x + 7 = 2\sqrt{y^2}\text{.} \label{with_y}
 \end{gather}
 \\
-De resterande lösningarna till (\ref{3rd_degree}) är nollställerna till andragradspolynomet i (\ref{2nd_degree}), vi löser denna andragradsekvation med valfri metod, lösningarna blir:
+Vi noterar att beroende på $x$ är antingen $y \geq 0$ varpå $\sqrt{y^{2}} = y$ eller så är $y < 0$ varpå $\sqrt{y^{2}} = -y$. Det ger två fall för (\ref{with_y}):
 
-\begin{gather*}
-  x = -\frac{7}{2} \quad \text{och} \quad x = - \frac{1}{2}\text{.}
-\end{gather*}
+\begin{align}
+  \begin{cases}
+    \text{(\ref{with_y})} \implies 2x^{2} + 10x + 7 = 2y, & \text{då}\; y \geq 0 \\
+    \text{(\ref{with_y})} \implies 2x^{2} + 10x + 7 = -2y, & \text{då}\; y < 0
+  \end{cases}\text{.} \label{cases}
+\end{align}
 \\
-$f(x) = 0$ har medfört (\ref{2nd_degree}) som har de tre lösningarna $x = -\tfrac{7}{2}$, $x = -\tfrac{7}{4}$ och $x = -\tfrac{1}{2}$, att $x = -\tfrac{7}{4}$ inte är en lösning till $f(x) = 0$ vet vi sedan innan. Testar vi de andra två lösningarna finner vi att endast $x = -\tfrac{1}{2}$ är en lösning till $f(x) = 0$.
+Detta ger oss en första- respektive andragradsekvation, lösningarna är $x = -\tfrac{7}{2}$, $x = -\tfrac{7}{4}$ och $x = -\tfrac{1}{2}$. (\ref{initial}) har medfört (\ref{cases}), alltså finns alla lösningar till (\ref{initial}) bland dessa tre värden på $x$\footnote{Ett annat sätt att överyga sig själv om att vi inte missat någon lösning till (\ref{initial}) är att kvadrera båda led i (\ref{squared}). Detta ger en tredjegradsekvation och de tre lösningar vi fann här löser också den ekvationen.}
+, vi testar var och ett medelts insättning i (\ref{initial}) och finner att $x = -\frac{1}{2}$ är den enda lösningen till $f(x) = 0$.
 \\
 \\
-Vi väljer nu två konkreta tal $k$ och $w$ som ligger till vänster respektive höger om nollstället, säg $k = -2$ och $w = 0$. Vi finner att $f(k) = 3$ och $f(w) = -1$. Nu har vi faktiskt all information vi behöver för att visa att $x < -\tfrac{1}{2}$ är lösningen till (\ref{**}):
+Vi väljer nu två konkreta tal $k$ och $w$ som ligger till vänster respektive höger om nollstället, säg $k = -2$ och $w = 0$. Vi finner att $f(k) = 3$ och $f(w) = -1$. Nu har vi faktiskt all information vi behöver för att visa att $x < -\tfrac{1}{2}$ är lösningen till $f(x) > 0$:
 \\
 \\
-$f(x)$ är en kontinuerlig funktion och $x = -1/2$ är dess enda nollställe. Det finns en punkt $k$ i intervallet $]-\infty, -\tfrac{1}{2}[$, så att $f(k) > 0$. Antag ett $\mu$ i detta intervall så att $f(\mu) < 0$. Enligt sats (14) i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} medför detta att $f(x)$ kommer att anta alla värden mellan $f(k)$ och $f(\mu)$ i intervallet $[k, \mu]$. Då kommer $f(x)$ att anta värdet $0$ som ligger mellan $f(k)$ och $f(\mu)$. Men $x = -\tfrac{1}{2}$ är det enda nollstället till $f(x)$ och ligger inte i intervallet $]-\infty, -\tfrac{1}{2}[$. Antagandet att $\mu$ finns har producerat en motsägelse, alltså måste motsatsen vara sann; det finns inget $\mu$ i intervallet och då gäller att $f(x) > 0$ för alla $x$ i intervallet.
+$f(x)$ är en kontinuerlig funktion och $x = -\tfrac{1}{2}$ är dess enda nollställe. Det finns en punkt $k$ i intervallet $\left]-\infty, -\tfrac{1}{2}\right[$ så att $f(k) > 0$. Antag ett $\mu$ i detta intervall så att $f(\mu) < 0$. Enligt sats (14) i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} medför detta att $f(x)$ kommer att anta alla värden mellan $f(k)$ och $f(\mu)$ i intervallet $\left[k, \mu\right]$. Då kommer $f(x)$ anta värdet $0$. Men $x = -\tfrac{1}{2}$ är det enda nollstället till $f(x)$ och ligger inte i intervallet $\left]-\infty, -\tfrac{1}{2}\right[$. Antagandet att $\mu$ finns har producerat en motsägelse, alltså måste motsatsen vara sann; det finns inget $\mu$ i intervallet och då gäller $f(x) > 0$ för alla $x$ i intervallet.
 \\
-\\På samma sätt visar vi att det för alla värden av $x$ intervallet $ ]-1/2, \infty[$ gäller att $f(x) < 0$ eftersomm $w$ ligger i detta intervall och $f(w) < 0$.
+\\På samma sätt visar vi att det för alla värden av $x$ intervallet $ \left]-1/2, \infty\right[$ gäller att $f(x) < 0$ eftersomm $w$ ligger i detta intervall och $f(w) < 0$.
 
 \centerline{$\qed$}
 
