tidy things upp

--- a/4/doc.tex
+++ b/4/doc.tex
@@ -76,12 +76,12 @@ Vi noterar att beroende på $x$ är antingen $y \geq 0$ varpå $\sqrt{y^{2}} = y
 Plockar vi bort vilkoren från (\ref{cases}) implicerar detta en vanlig första- respektive andragradsekvaion med lösningarna $x = -\tfrac{7}{2}$, $x = -\tfrac{7}{4}$ och $x = -\tfrac{1}{2}$. (\ref{initial}) har medfört dessa lösningar och vi testar vilka som också löser (\ref{initial}) medelst insättning och finner att $x = -\tfrac{1}{2}$ är den enda lösningen.\footnote{Om du har en gnagande oro över att vi missat någon lösning så prova att kvadrera båda led i (\ref{squared}). Detta ger en tredjegradsekvation och de tre lösningar vi fann här löser också den ekvationen. Varför det är på detta sätt förstår jag inte, men det kan väll inte vara en slump!?}
 \\
 \\
-Vi väljer nu två konkreta tal $k$ och $w$ som ligger till vänster respektive höger om nollstället, säg $k = -2$ och $w = 0$. Vi finner att $f(k) = 3$ och $f(w) = -1$. Nu kommer slutklämmen:
+Nu till slutklämmen:
 \\
 \\
-$f(x)$ är en kontinuerlig funktion och $x = -\tfrac{1}{2}$ är dess enda nollställe. Det finns en punkt $k$ i intervallet $\left]-\infty, -\tfrac{1}{2}\right[$ så att $f(k) > 0$. Antag ett $\mu$ i detta intervall så att $f(\mu) < 0$. Enligt sats (14) i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} medför detta att $f(x)$ kommer att anta alla värden mellan $f(k)$ och $f(\mu)$ i intervallet $\left[k, \mu\right]$. Då kommer $f(x)$ anta värdet $0$. Men $x = -\tfrac{1}{2}$ är det enda nollstället till $f(x)$ och ligger inte i intervallet $\left]-\infty, -\tfrac{1}{2}\right[$. Antagandet att $\mu$ finns har producerat en motsägelse, alltså måste motsatsen vara sann; det finns inget $\mu$ i intervallet och då gäller $f(x) > 0$ för alla $x$ i intervallet.
+$f(x)$ är en kontinuerlig funktion och $x = -\tfrac{1}{2}$ är dess enda nollställe. Talet $-2$ ligger i intervallet $\left]-\infty, -\tfrac{1}{2}\right[$ och $f(-2) > 0$. Antag ett $\mu$ i detta intervall så att $f(\mu) < 0$. Enligt sats (14) i Persson och Böiers \emph{Analys i en variabel}\footnote{Upplaga 3:2 s.153} medför detta att $f(x)$ antar alla värden mellan $f(-2)$ och $f(\mu)$ i intervallet $\left[-2, \mu\right]$. Då kommer $f(x)$ anta värdet $0$. Men $x = -\tfrac{1}{2}$ är det enda nollstället till $f(x)$ och ligger inte i intervallet. Antagandet att $\mu$ finns har producerat en motsägelse, alltså måste motsatsen vara sann; det finns inget $\mu$ i intervallet och då gäller $f(x) > 0$ för alla $x$ i intervallet.
 \\
-\\På samma sätt visar vi att det för alla värden av $x$ intervallet $ \left]-1/2, \infty\right[$ gäller att $f(x) < 0$ eftersomm $w$ ligger i detta intervall och $f(w) < 0$.
+\\På samma sätt visar vi att det för alla värden av $x$ intervallet $ \left]-1/2, \infty\right[$ gäller att $f(x) < 0$ eftersomm talet $0$ ligger i detta intervall och $f(0) < 0$.
 
 \centerline{$\qed$}
 
